css/amiyaroad.css
/* ... */
.hud--volume-slider {
	max-width: 120px;
	max-height: 120px;
}

.hud--editor_info {
	max-width: 300px;
	position: relative;
	float: left;
	text-align: left;
	padding-left: 10px;
}

.hud--speed {
	margin-left: auto;
	margin-right: auto;
	background-color: #F00;
	line-height: 1;

}

.hud--stamina {
	line-height: 1;
	width: 130px;
	height: 130px;
	position: absolute;
	left: 10px;
	bottom: 10px;
	vertical-align: bottom;
	background-color: transparent;
	
}
@media (min-width: 750px) {
	.hud--stamina {
		background-color: #b84ff4;
	}
}
.hud--tile_selection {
	line-height: 1;
	width: 130px;
	height: 130px;
	position: absolute;
	right: 10px;
	bottom: 10px;
	vertical-align: bottom;

	background-color: #dda7fc;
}

.hud--level_export {
	line-height: 1;
	width: auto;
	height: 130px;
	position: absolute;
	right: 140px;
	bottom: 10px;
	vertical-align: bottom;
	background-color: transparent;
}

#level-image-input {
	display: block;
}

.hud--stamina-value {
	background-color: #0F0;
	margin-bottom: 0;

}

#display-image {
	width: 600px;
	height: 600px;
	border: 1px solid black;
	background-position: center;
	background-size: cover;
}

.hud--stamina-label {
	position: absolute;
	left: 10px;
	width: 130px;
	bottom: 60px;
	z-index: 801;
	font-size: 2rem;
	text-align: center;
}

.hud--stamina-img {
	width: 130px;
	height: 130px;
	position: absolute;
	left: 10px;
	bottom: 10px;
	z-index: 800;
}

.menu--start-screen {
	position: absolute;
	width: 100%;
	height: 100%;
	background-color: #dddbf9;
}

.menu--loading-screen {
	position: absolute;
	width: 100%;
	height: 100%;
	color: #ffffff;
	background-color: #333333;
}

.hide {
	display: none !important;
}

.modal {
	display: block;
	position: fixed;
	z-index: 10;
	left: 0;
	top: 0;
	width: 100%;
	height: 100%;
	overflow: auto;
	background-color: rgba(0, 0, 0, 0.4);
}

.modal.hide {
	display: none;
}

.modal-content {
	background-color: #dda7fc;
	z-index: 20;
	margin: auto;
	padding: 20px;
	margin-top: 5%;
	border: 1px solid #888;
	width: 100%;
}

@media (min-width: 750px) {
	.modal-content {
		width: 50%;
	}
}

.modal--close {
	color: rgb(118, 46, 235);
	float: right;
	font-size: 28px;
	font-weight: bold;
}

.modal--close:hover,
.modal--close:focus {
	color: black;
	text-decoration: none;
	cursor: pointer;
}

.hud--basic {
	text-align: right;
}
.hud--buttons.hud--basic{
	position:fixed;
	top:0;
	right:0;
}

@media (min-width: 750px) {
	.hud--basic {
		text-align: center;
	}
}
@media (min-width: 750px) {
	.hud--buttons.hud--basic{
		display: block;
		position: relative;
	}
	
}
.hud--mobile {
	display: block;
}

.hud--mobile--control-button {
	background-color: rgba(255, 155, 225, 0.4);
	z-index: 20;
	margin: 0;
	padding: 0;
	border: 1px solid #888;
}

.hud--mobile--left {
	width: 100px;
    height: 200px;
    display: block;
    position: fixed;
    z-index: 300;
    left: 0;
    bottom: 0;
}

.hud--mobile--right {
	width: 100px;
    height: 200px;
    display: block;
    position: fixed;
    z-index: 300;
    left: 100px;
    bottom: 0;
}

.hud--mobile--top {
	height: 100px;
    width: 100px;
    display: block;
    position: fixed;
    z-index: 300;
    right: 0;
    bottom: 100px;
}

.hud--mobile--bottom {
	height: 100px;
    width: 100px;
    display: block;
    position: fixed;
    z-index: 300;
    right: 0;
    bottom: 0;
}

.hud--mobile-keyCap {
	text-align: center;
	pointer-events: none;
}

@media (min-width: 750px) {
	.hud--mobile {
		display: none;
	}
}


h1 {
	font-size: 2.0em;
}

h2 {
	font-size: 1.5em;
}

h3 {
	font-size: 1.2em;
	margin-bottom: 0;
}

h4 {
	font-size: 1em;
	margin-bottom: 0;
}

.ui-slider {
	margin-bottom: 10px;
}

p,
span {
	line-height: 1;
}

/*! jQuery UI - v1.13.1 - 2022-01-20
* http://jqueryui.com
* Includes: core.css, accordion.css, autocomplete.css, menu.css, button.css, controlgroup.css, checkboxradio.css, datepicker.css, dialog.css, draggable.css, resizable.css, progressbar.css, selectable.css, selectmenu.css, slider.css, sortable.css, spinner.css, tabs.css, tooltip.css, theme.css
* To view and modify this theme, visit http://jqueryui.com/themeroller/?ffDefault=Arial%2CHelvetica%2Csans-serif&fsDefault=1em&fwDefault=normal&cornerRadius=3px&bgColorHeader=e9e9e9&bgTextureHeader=flat&borderColorHeader=dddddd&fcHeader=333333&iconColorHeader=444444&bgColorContent=ffffff&bgTextureContent=flat&borderColorContent=dddddd&fcContent=333333&iconColorContent=444444&bgColorDefault=f6f6f6&bgTextureDefault=flat&borderColorDefault=c5c5c5&fcDefault=454545&iconColorDefault=777777&bgColorHover=ededed&bgTextureHover=flat&borderColorHover=cccccc&fcHover=2b2b2b&iconColorHover=555555&bgColorActive=007fff&bgTextureActive=flat&borderColorActive=003eff&fcActive=ffffff&iconColorActive=ffffff&bgColorHighlight=fffa90&bgTextureHighlight=flat&borderColorHighlight=dad55e&fcHighlight=777620&iconColorHighlight=777620&bgColorError=fddfdf&bgTextureError=flat&borderColorError=f1a899&fcError=5f3f3f&iconColorError=cc0000&bgColorOverlay=aaaaaa&bgTextureOverlay=flat&bgImgOpacityOverlay=0&opacityOverlay=30&bgColorShadow=666666&bgTextureShadow=flat&bgImgOpacityShadow=0&opacityShadow=30&thicknessShadow=5px&offsetTopShadow=0px&offsetLeftShadow=0px&cornerRadiusShadow=8px
* Copyright jQuery Foundation and other contributors; Licensed MIT */

/* Layout helpers
----------------------------------*/
.ui-helper-hidden {
	display: none;
}

.ui-helper-hidden-accessible {
	border: 0;
	clip: rect(0 0 0 0);
	height: 1px;
	margin: -1px;
	overflow: hidden;
	padding: 0;
	position: absolute;
	width: 1px;
}

.ui-helper-reset {
	margin: 0;
	padding: 0;
	border: 0;
	outline: 0;
	line-height: 1.3;
	text-decoration: none;
	font-size: 100%;
	list-style: none;
}

.ui-helper-clearfix:before,
.ui-helper-clearfix:after {
	content: "";
	display: table;
	border-collapse: collapse;
}

.ui-helper-clearfix:after {
	clear: both;
}

.ui-helper-zfix {
	width: 100%;
	height: 100%;
	top: 0;
	left: 0;
	position: absolute;
	opacity: 0;
	-ms-filter: "alpha(opacity=0)";
	/* support: IE8 */
}
/* ... */

